# tfel-editor

./: .clang-format  CMakeLists.txt  INSTALL.md  Makefile.am  README.md  bootstrap.sh  check_all.sh  clean.sh  configure.ac  install.sh
cmake/modules/: FindReadLine.cmake  Makefile.am  autotools.cmake  clang.cmake  common-compiler-flags.cmake  compiler.cmake  gcc.cmake  hunspell.cmake  msvc.cmake  pathscale.cmake  qemacs.cmake  qt.cmake  tfel-editor.cmake  tfel-plot.cmake  tfel.cmake
docs/: emacs-shortcuts.md  faq.md  index.md  known-issues.md  mfront-major-mode.md  mtest-major-mode.md
include/: CMakeLists.txt  Makefile.am
include/QEmacs/: CMajorModeBase.hxx  CSyntaxHighlighter.hxx  CSyntaxHighlighterBase.hxx  CompiledLanguageMajorModeBase.hxx  Config.hxx  CxxMajorMode.hxx  CxxSyntaxHighlighter.hxx  CxxTokenizer.hxx  Debug.hxx  Debug.ixx  DirectoryMajorMode.hxx  ProcessInteractionFrame.hxx  ProcessOutputFrame.hxx  ProcessOutputMajorModeBase.hxx  QAbstractScrollAreaWrapper.hxx  QEmacsBuffer.hxx  QEmacsBuildInformation.hxx  QEmacsCommand.hxx  QEmacsCommandFactory.hxx  QEmacsCommandFactory.ixx  QEmacsCommandLine.hxx  QEmacsCompletionFrame.hxx  QEmacsFileDownloader.hxx  QEmacsGrepCommand.hxx  QEmacsHunspellDictionariesManager.hxx  QEmacsLineEdit.hxx  QEmacsMainWindow.hxx  QEmacsMajorMode.hxx  QEmacsMajorModeBase.hxx  QEmacsMajorModeChangeCommand.hxx  QEmacsMajorModeFactory.hxx  QEmacsMajorModeFactory.ixx  QEmacsPlainTextEdit.hxx  QEmacsProcessLineEdit.hxx  QEmacsRectangleMode.hxx  QEmacsShellProcessLineEdit.hxx  QEmacsShortCutStyle.hxx  QEmacsStandardFunctionCommand.hxx  QEmacsStandardFunctionCommand.ixx  QEmacsTextBrowser.hxx  (+16 more)
include/QEmacs/utf8/: checked.h  unchecked.h  utf8.h
include/TFEL/GUI/: Buffer.hxx  BuildInformation.hxx  CMajorModeBase.hxx  CSyntaxHighlighter.hxx  CSyntaxHighlighterBase.hxx  Command.hxx  CommandFactory.hxx  CommandFactory.ixx  CommandLine.hxx  CompiledLanguageMajorModeBase.hxx  CompletionFrame.hxx  Config.hxx  CxxMajorMode.hxx  CxxSyntaxHighlighter.hxx  Debug.hxx  Debug.ixx  DirectoryMajorMode.hxx  EditorWidget.hxx  FileDownloader.hxx  GrepCommand.hxx  HunspellDictionariesManager.hxx  LineEdit.hxx  MainWindow.hxx  MajorMode.hxx  MajorModeBase.hxx  MajorModeChangeCommand.hxx  MajorModeFactory.hxx  MajorModeFactory.ixx  PlainTextEdit.hxx  ProcessInteractionFrame.hxx  ProcessLineEdit.hxx  ProcessOutputFrame.hxx  ProcessOutputMajorModeBase.hxx  QAbstractScrollAreaWrapper.hxx  QWebEngineViewWrapper.hxx  RectangleMode.hxx  SecondaryTask.hxx  SecondaryTaskManager.hxx  ShellProcessLineEdit.hxx  ShortCutStyle.hxx  (+13 more)
include/TFEL/GUI/utf8/: checked.h  unchecked.h  utf8.h
m4/: ax_lib_readline.m4  check_tfel.m4  check_tfel_plot.m4  gxx.m4  m4-ax_have_qt.m4
src/: Buffer.cxx  BuildInformation.cxx.in  CMajorModeBase.cxx  CMakeLists.txt  CSyntaxHighlighter.cxx  CSyntaxHighlighterBase.cxx  Command.cxx  CommandFactory.cxx  CommandLine.cxx  CompilationOutputMajorMode.cxx  CompiledLanguageMajorModeBase.cxx  CxxMajorMode.cxx  CxxSyntaxHighlighter.cxx  CxxTokenizer.cxx  DirectoryMajorMode.cxx  EditorWidget.cxx  FileDownloader.cxx  GrepCommand.cxx  GrepOutputMajorMode.cxx  HunspellDictionariesManager.cxx  LineEdit.cxx  MainWindow.cxx  MajorMode.cxx  MajorModeBase.cxx  MajorModeChangeCommand.cxx  MajorModeFactory.cxx  Makefile.am  PlainTextEdit.cxx  ProcessInteractionFrame.cxx  ProcessLineEdit.cxx  ProcessOutputFrame.cxx  ProcessOutputMajorModeBase.cxx  QAbstractScrollAreaWrapper.cxx  QEmacsBuffer.cxx  QEmacsBuildInformation.cxx.in  QEmacsCommand.cxx  QEmacsCommandFactory.cxx  QEmacsCommandLine.cxx  QEmacsFileDownloader.cxx  QEmacsGrepCommand.cxx  (+44 more)
src/hunspell-1.3.2/: ChangeLog  Makefile.am  bootstrap.sh  clean.sh  config.h.in  configure.ac
src/hunspell-1.3.2/m4/: ChangeLog  Makefile.am
src/hunspell-1.3.2/po/: hu.gmo  hu.po  hunspell.pot  it.gmo  it.po
src/hunspell-1.3.2/src/hunspell/: Makefile.am  affixmgr.cxx  affixmgr.hxx
src/hunspell-1.3.2/src/parsers/: Makefile.am
src/hunspell-1.3.2/src/tools/: Makefile.am  chmorph.cxx
utils/: Makefile.am
utils/mfront/: Makefile.am
utils/mfront/include/: CMakeLists.txt  Makefile.am
utils/mfront/include/QEmacs/: BehaviourDescription.hxx  BehaviourSummaryPage.hxx  ImportBehaviour.hxx  ImportBehaviourWizard.hxx  ImportMFMBehaviour.hxx  ImportMFMBehaviourWizard.hxx  ImportMFMMaterialProperty.hxx  MFMDataBase.hxx  MFMFilterProxyModel.hxx  MaterialPropertiesSelectionPage.hxx  MaterialPropertyDescription.hxx  MaterialPropertySelectorWidget.hxx  QEmacsMFrontImportConfig.hxx  QEmacsMFrontImportWidgetsConfig.hxx  SelectBehaviourPage.hxx  SelectMFMBehaviour.hxx  SelectMFMBehaviourPage.hxx
utils/mfront/include/TFEL/GUI/: BehaviourDescription.hxx  BehaviourSummaryPage.hxx  ImportBehaviourWizard.hxx  ImportMFMBehaviour.hxx  ImportMFMBehaviourWizard.hxx  ImportMFMMaterialProperty.hxx  MFMDataBase.hxx  MFMFilterProxyModel.hxx  MFrontImportWidgetsConfig.hxx  MaterialPropertiesSelectionPage.hxx  MaterialPropertyDescription.hxx  MaterialPropertySelectorWidget.hxx  SelectBehaviourPage.hxx  SelectMFMBehaviour.hxx  SelectMFMBehaviourPage.hxx
utils/mfront/src/: BehaviourDescription.cxx  BehaviourSummaryPage.cxx  CMakeLists.txt  ImportBehaviour.cxx  ImportBehaviourWizard.cxx  ImportMFMBehaviour.cxx  ImportMFMBehaviourWizard.cxx  ImportMFMMaterialProperty.cxx  MFMDataBase.cxx  MFMFilterProxyModel.cxx  Makefile.am  MaterialPropertiesSelectionPage.cxx  MaterialPropertyDescription.cxx  MaterialPropertySelectorWidget.cxx  SelectBehaviourPage.cxx  SelectMFMBehaviour.cxx  SelectMFMBehaviourPage.cxx
