nobase_include_HEADERS = QEmacs/Config.hxx                \
			 QEmacs/SecondaryTask.hxx                     \
			 QEmacs/SecondaryTaskManager.hxx              \
			 QEmacs/QEmacsFileDownloader.hxx              \
			 QEmacs/QEmacsBuildInformation.hxx            \
			 QEmacs/QEmacsShortCutStyle.hxx               \
			 QEmacs/QEmacsRectangleMode.hxx               \
			 QEmacs/QEmacsMajorModeChangeCommand.hxx      \
			 QEmacs/Utilities.hxx                         \
			 QEmacs/SpellChecker.hxx                      \
			 QEmacs/QEmacsHunspellDictionariesManager.hxx \
			 QEmacs/QEmacsMainWindow.hxx                  \
			 QEmacs/QEmacsWidget.hxx                      \
			 QEmacs/QEmacsCommand.hxx                     \
			 QEmacs/QEmacsStandardFunctionCommand.hxx     \
			 QEmacs/QEmacsStandardFunctionCommand.ixx     \
			 QEmacs/QEmacsGrepCommand.hxx                 \
			 QEmacs/QEmacsCommandFactory.hxx              \
			 QEmacs/QEmacsCommandFactory.ixx              \
			 QEmacs/QEmacsBuffer.hxx                      \
			 QEmacs/QAbstractScrollAreaWrapper.hxx	      \
			 QEmacs/QWebEngineViewWrapper.hxx             \
		 	 QEmacs/QEmacsTextEditBase.hxx                \
		 	 QEmacs/QEmacsPlainTextEdit.hxx               \
		 	 QEmacs/QEmacsTextBrowser.hxx                 \
		 	 QEmacs/QEmacsTextEdit.hxx                    \
		 	 QEmacs/QEmacsTextEditSearch.hxx              \
			 QEmacs/QEmacsTextEditQueryReplace.hxx        \
			 QEmacs/QEmacsTextEditKeyPressEventFilter.hxx \
			 QEmacs/QEmacsTextEditReplaceFilter.hxx       \
			 QEmacs/QEmacsMajorMode.hxx                   \
			 QEmacs/QEmacsLineEdit.hxx                    \
			 QEmacs/QEmacsProcessLineEdit.hxx             \
			 QEmacs/QEmacsShellProcessLineEdit.hxx        \
			 QEmacs/QEmacsMajorModeBase.hxx               \
			 QEmacs/QEmacsMajorModeFactory.hxx            \
			 QEmacs/QEmacsMajorModeFactory.ixx            \
			 QEmacs/CSyntaxHighlighterBase.hxx            \
			 QEmacs/CSyntaxHighlighter.hxx                \
			 QEmacs/CompiledLanguageMajorModeBase.hxx     \
			 QEmacs/CMajorModeBase.hxx                    \
			 QEmacs/CxxMajorMode.hxx                      \
			 QEmacs/CxxSyntaxHighlighter.hxx              \
			 QEmacs/ProcessOutputFrame.hxx                \
			 QEmacs/ProcessOutputMajorModeBase.hxx        \
			 QEmacs/ProcessInteractionFrame.hxx           \
			 QEmacs/DirectoryMajorMode.hxx

nobase_noinst_HEADERS = QEmacs/utf8/doc/ReleaseNotes \
			QEmacs/utf8/doc/utf8cpp.html \
			QEmacs/utf8/unchecked.h      \
			QEmacs/utf8/core.h	     \
			QEmacs/utf8/checked.h        \
			QEmacs/utf8/utf8.h

EXTRA_DIST=CMakeLists.txt
