EXTRA_DIST=OptimizeForArchitecture.cmake \
	   autotools.cmake		 \
	   FindReadLine.cmake		 \
	   clang.cmake			 \
	   common-compiler-flags.cmake	 \
	   compiler.cmake		 \
	   gcc.cmake			 \
	   intel.cmake			 \
	   msvc.cmake			 \
	   pathscale.cmake		 \
	   qt.cmake			 \
	   pandoc.cmake			 \
	   tfel.cmake			 \
	   qemacs.cmake

