nobase_include_HEADERS =                                 \
			 QEmacs/QEmacsMFrontImportConfig.hxx \
			 QEmacs/MaterialPropertyDescription.hxx     \
			 QEmacs/BehaviourDescription.hxx            \
			 QEmacs/MFMDataBase.hxx                     \
			 QEmacs/MFMFilterProxyModel.hxx             \
			 QEmacs/SelectBehaviourPage.hxx             \
			 QEmacs/MaterialPropertiesSelectionPage.hxx \
			 QEmacs/ImportBehaviour.hxx                 \
			 QEmacs/ImportMFMMaterialProperty.hxx       \
			 QEmacs/SelectMFMBehaviour.hxx              \
			 QEmacs/ImportMFMBehaviour.hxx              \
              QEmacs/MaterialPropertySelectorWidget.hxx
EXTRA_DIST = CMakeLists.txt
