nobase_include_HEADERS =                                 \
			 QEmacs/QEmacsMFrontImportWidgetsConfig.hxx \
			 QEmacs/MaterialPropertyDescription.hxx     \
			 QEmacs/BehaviourDescription.hxx            \
			 QEmacs/MFMDataBase.hxx                     \
			 QEmacs/MFMFilterProxyModel.hxx             \
              QEmacs/MaterialPropertySelectorWidget.hxx   \
			 QEmacs/ImportMFMMaterialProperty.hxx       \
			 QEmacs/SelectMFMBehaviour.hxx              \
			 QEmacs/ImportMFMBehaviour.hxx              \
			 QEmacs/MaterialPropertiesSelectionPage.hxx \
			 QEmacs/SelectBehaviourPage.hxx             \
			 QEmacs/SelectMFMBehaviourPage.hxx          \
			 QEmacs/BehaviourSummaryPage.hxx            \
			 QEmacs/ImportBehaviourWizard.hxx           \
			 QEmacs/ImportMFMBehaviourWizard.hxx

EXTRA_DIST = CMakeLists.txt
